# croaring_cmake_demo_from_single_header

./: CMakeLists.txt  README.md
.github/workflows/: mingw-ci.yml  mingw64-ci.yml  msys2.yml  ubuntu18.yml  ubuntu20.yml  vs16-ci.yml  vs16-clang-ci.yml  vs16-ninja-ci.yml
dependencies/croaring/: roaring.c  roaring.h  roaring.hh
src/: CMakeLists.txt  test.c  test.cpp
